[gd_scene load_steps=9 format=3 uid="uid://dq4pctubnml0t"]

[ext_resource type="Script" path="res://control.gd" id="1_t28ga"]
[ext_resource type="Texture2D" uid="uid://h0231tho2s7i" path="res://titles1/Plain.png" id="1_tlfdx"]
[ext_resource type="FontFile" uid="uid://df56yvv6vfy4x" path="res://Symtext.ttf" id="2_oitgl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oxs82"]
texture = ExtResource("1_tlfdx")
modulate_color = Color(0.707967, 0.707967, 0.707967, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17xvu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3gf2o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7umdv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6v1u4"]
bg_color = Color(0.422739, 0.15608, 0.0134697, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t28ga")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = -1.0
offset_right = 1153.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_oxs82")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 303.0
offset_right = 589.0
offset_bottom = 452.0
scale = Vector2(2.36531, 2.12276)
theme_override_constants/separation = 7

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_oitgl")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_17xvu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_3gf2o")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7umdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_6v1u4")
text = "PLAY"

[node name="Option" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_oitgl")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_17xvu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_3gf2o")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7umdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_6v1u4")
text = "OPTIONS"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_oitgl")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_17xvu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_3gf2o")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7umdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_6v1u4")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 336.0
offset_top = 55.0
offset_right = 900.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_oitgl")
theme_override_font_sizes/font_size = 50
text = "	        RESCUE!
Save The Wildlife"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
